fix footer z-index

--- a/scss/blocks/page-footer.scss
+++ b/scss/blocks/page-footer.scss
@@ -1,6 +1,7 @@
 .page-footer{
 	margin: 0;
 	padding: 0;
+	z-index: 50;
 }
 .page-footer__wrapper{
 	min-height: 130px;
